--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,13 @@ project(cLox C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(cLox main.c)
+add_executable(cLox main.c
+        common.h
+        chunk.h
+        chunk.c
+        memory.h
+        memory.c
+        debug.h
+        debug.c
+        value.h
+        value.c)
