--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,8 @@ add_executable(cLox main.c
         value.h
         value.c
         vm.h
-        vm.c)
+        vm.c
+        compiler.h
+        compiler.c
+        scanner.h
+        scanner.c)
